--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -28,6 +28,7 @@ disabled_rules:
 - type_body_length
 - unneeded_synthesized_initializer
 - unused_closure_parameter
+- unused_optional_binding
 opt_in_rules:
 - attributes
 - comma_inheritance
