use smarter clone

--- a/.github/actions/clone-everything/action.yml
+++ b/.github/actions/clone-everything/action.yml
@@ -1,36 +1,41 @@
-name: 'Clone everything'
-description: 'Checks out the repo, and initializes submodules. Must check out repo first.'
+name: "Clone everything"
+description: "Checks out the repo, and initializes submodules. Must check out repo first."
 
 inputs:
   access-token:
-    description: 'Private pods access token'
+    description: "Private pods access token"
     required: false
 
 runs:
-  using: 'composite'
+  using: "composite"
 
   steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v3
+    - id: checkout_repo
+      name: Checkout Repo
+      uses: actions/checkout@v4
       with:
         # Check out submodules through GitHub instead of from scratch later.
         # THIS STEP WILL FAIL if the current Pods commit is only available in Private.
         # However, we can continue and the build will still pass.
         submodules: recursive
-      continue-on-error: true
+      continue-on-error: ${{ inputs.access-token != '' }}
+
+    - id: private_pods_ref
+      name: Compute Private Pods Ref
+      if: ${{ steps.checkout_repo.outcome == 'failure' }}
+      shell: bash
+      run: echo "ref=$(git submodule status --cached Pods | aws '{print $1}')" >> "$GITHUB_OUTPUT"
 
     # Checkout private pods repo iff we have an access token to read private repos
     - name: Checkout Private Pods
-      uses: actions/checkout@v3
-      if: ${{ inputs.access-token != '' }}
+      uses: actions/checkout@v4
+      if: ${{ steps.checkout_repo.outcome == 'failure' }}
       with:
         repository: signalapp/signal-pods-private
         token: ${{ inputs.access-token }}
         path: Pods
-        # We don't know which commit we'll need in this step, so fetch everything so that
-        # `make dependencies` doesn't end up doing it the slow way.
-        fetch-depth: 0
+        ref: ${{ steps.private_pods_ref.outputs.ref }}
 
-    - name: Initialize Submodules
+    - name: Fetch RingRTC
       shell: bash
-      run: make dependencies
+      run: make fetch-ringrtc
