--- a/Signal/Signal.entitlements
+++ b/Signal/Signal.entitlements
@@ -11,6 +11,7 @@
 		<string>applinks:signal.group</string>
 		<string>applinks:signal.me</string>
 		<string>applinks:signaldonations.org</string>
+		<string>applinks:signal.link</string>
 	</array>
 	<key>com.apple.developer.default-data-protection</key>
 	<string>NSFileProtectionComplete</string>
