Update to Xcode 15

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  # Path format pulled from https://github.com/actions/runner-images/blob/main/images/macos/macos-12-Readme.md#xcode
-  DEVELOPER_DIR: /Applications/Xcode_14.2.app
+  # Path format pulled from https://github.com/actions/runner-images/blob/main/images/macos/macos-14-Readme.md#xcode
+  DEVELOPER_DIR: /Applications/Xcode_15.3.app
 
 jobs:
   build_and_test:
@@ -26,7 +26,7 @@ jobs:
 
     timeout-minutes: 20
 
-    runs-on: macos-latest-xlarge
+    runs-on: macos-14-xlarge
 
     env:
       FASTLANE_XCODEBUILD_SETTINGS_RETRIES: 7
@@ -70,7 +70,7 @@ jobs:
 
     timeout-minutes: 10
 
-    runs-on: macos-12
+    runs-on: macos-14
 
     if: github.event_name == 'pull_request'
 
@@ -88,7 +88,7 @@ jobs:
 
     timeout-minutes: 5
 
-    runs-on: macos-12
+    runs-on: macos-14
 
     if: github.event_name == 'pull_request'
 
@@ -99,7 +99,7 @@ jobs:
         run: git fetch origin --depth 1 ${{ github.base_ref }}
 
       - name: Install Dependencies
-        run: brew install clang-format python3
+        run: brew install clang-format swiftlint
 
       - name: Lint files changed in the PR
         run: |
