--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -19,11 +19,15 @@ disabled_rules:
 - function_parameter_count
 - identifier_name
 - line_length
+- mark
 - multiple_closures_with_trailing_closure
 - nesting
 - no_fallthrough_only
+- non_optional_string_data_conversion
 - notification_center_detachment
 - opening_brace
+- redundant_void_return
+- static_over_final_class
 - todo
 - trailing_comma
 - type_body_length
