Integrate shared Message Backup integration test repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Pods"]
 	path = Pods
 	url = https://github.com/signalapp/Signal-Pods.git
+[submodule "SignalServiceKit/tests/MessageBackup/Signal-Message-Backup-Tests"]
+	path = SignalServiceKit/tests/MessageBackup/Signal-Message-Backup-Tests
+	url = https://github.com/signalapp/Signal-Message-Backup-Tests
