--- a/Signal.xcodeproj/xcshareddata/xcschemes/Signal.xcscheme
+++ b/Signal.xcodeproj/xcshareddata/xcschemes/Signal.xcscheme
@@ -134,6 +134,36 @@
             </BuildableReference>
             <SkippedTests>
                <Test
+                  Identifier = "AttachmentStoreTests/testDuplicateOwner()">
+               </Test>
+               <Test
+                  Identifier = "AttachmentStoreTests/testDuplicateOwnersInvalid()">
+               </Test>
+               <Test
+                  Identifier = "AttachmentStoreTests/testEnumerateAttachmentReferences()">
+               </Test>
+               <Test
+                  Identifier = "AttachmentStoreTests/testInsert()">
+               </Test>
+               <Test
+                  Identifier = "AttachmentStoreTests/testInsertOverflowTimestamp()">
+               </Test>
+               <Test
+                  Identifier = "AttachmentStoreTests/testInsertSamePlaintextHash()">
+               </Test>
+               <Test
+                  Identifier = "AttachmentStoreTests/testMultipleInserts()">
+               </Test>
+               <Test
+                  Identifier = "AttachmentStoreTests/testReinsertGlobalThreadAttachment()">
+               </Test>
+               <Test
+                  Identifier = "AttachmentStoreTests/testRemoveOwner()">
+               </Test>
+               <Test
+                  Identifier = "AttachmentStoreTests/testUpdateReceivedAtTimestamp()">
+               </Test>
+               <Test
                   Identifier = "MessageSendLogTests/testPlaintextMismatchFails()">
                </Test>
             </SkippedTests>
