Throw when inserting a duplicate attachment by plaintext hash

--- a/Signal.xcodeproj/xcshareddata/xcschemes/Signal.xcscheme
+++ b/Signal.xcodeproj/xcshareddata/xcschemes/Signal.xcscheme
@@ -134,6 +134,12 @@
             </BuildableReference>
             <SkippedTests>
                <Test
+                  Identifier = "AttachmentStoreTests/testEnumerateAttachmentReferences()">
+               </Test>
+               <Test
+                  Identifier = "AttachmentStoreTests/testRemoveOwner()">
+               </Test>
+               <Test
                   Identifier = "MessageSendLogTests/testPlaintextMismatchFails()">
                </Test>
             </SkippedTests>
