--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
     timeout-minutes: 20
 
-    runs-on: macos-14
+    runs-on: macos-14-xlarge
 
     env:
       FASTLANE_XCODEBUILD_SETTINGS_RETRIES: 7
