Remove unused protobuf file

--- a/SignalServiceKit/protobuf/Makefile
+++ b/SignalServiceKit/protobuf/Makefile
@@ -10,7 +10,7 @@ PROTOC=protoc \
 WRAPPER_SCRIPT=../../Scripts/protos/ProtoWrappers.py \
 		--proto-dir='./' --verbose
 
-all: signal_service_protos provisioning_protos fingerprint_protos websocket_protos signal_ios_protos key_backup_protos storage_service_protos groups_protos device_transfer_protos session_record_protos cdsi_protos svr_protos mobilecoin_protos
+all: signal_service_protos provisioning_protos fingerprint_protos websocket_protos signal_ios_protos storage_service_protos groups_protos device_transfer_protos session_record_protos cdsi_protos svr_protos mobilecoin_protos
 
 signal_service_protos: SignalService.proto
 	$(PROTOC) --swift_out=../Protos/Generated \
@@ -41,12 +41,6 @@ signal_ios_protos: SignalIOS.proto
 		SignalIOS.proto
 	$(WRAPPER_SCRIPT) --dst-dir=../Protos/Generated \
 		--wrapper-prefix=SignalIOSProto --proto-prefix=IOSProtos --proto-file=SignalIOS.proto
-
-key_backup_protos: KeyBackup.proto
-	$(PROTOC) --swift_out=../Protos/Generated \
-		KeyBackup.proto
-	$(WRAPPER_SCRIPT) --dst-dir=../Protos/Generated \
-		--wrapper-prefix=KeyBackupProto --proto-prefix=KeyBackupProtos --proto-file=KeyBackup.proto
 
 storage_service_protos: StorageService.proto
 	$(PROTOC) --swift_out=../Protos/Generated \
