--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -8,6 +8,7 @@ excluded:
 - Signal/Emoji/EmojiWithSkinTones+String.swift
 disabled_rules:
 - block_based_kvo
+- compiler_protocol_init
 - control_statement
 - cyclomatic_complexity
 - empty_enum_arguments
