Update CI to Xcode 16 RC

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
 
     strategy:
       matrix:
-        xcode: ["Xcode_15.4", "Xcode_16_beta_6"]
+        xcode: ["Xcode_15.4", "Xcode_16.0"]
 
     steps:
       - name: Set Xcode version
