--- a/Signal/Signal-Info.plist
+++ b/Signal/Signal-Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
+		<string>AttachmentValidationBackfillMigrator</string>
 		<string>MessageAttachmentMigrationTask</string>
 		<string>MessageFetchBGRefreshTask</string>
 	</array>
